# kd-schedule

./: .dockerignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  justfile  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  generate-openapi.yml  generate-schemas.yml  setup-ci.yml
alembic/: env.py
alembic/versions/: 2025_03_14_2010-fa575b6aba1a_init_db.py  2025_04_26_2058-9ffcf246c433_make_medicine_policy_unique.py
db_homework/: db_homework.txt  exc_3.sql
diagrams/: kd-schedule.drawio  kd-schedule.sql
docs/: openapi.json  openapi.yaml
protos/: schedule.proto
scripts/: generate_openapi.py
src/: main.py  trigger.py
src/api/v1/: __init__.py  response_schemas.py
src/api/v1/schedule/: dependencies.py  router.py  schemas.py  schemas_old.py  service.py  utils.py
src/api/v1/schedule/schemas/: __init__.py  generated_schemas.py
src/core/: config.py  logger.py  logger_old.py  logging.py  middleware.py
src/database/: connection.py
src/database/models/: BaseModel.py  __init__.py  schedules.py  users.py
src/grpc/: interceptors.py  schedule_pb2.py  schedule_pb2_grpc.py  server.py
src/grpc/servicers/: schedule_servicer.py  utils.py
src/grpc_server/: interceptors.py  schedule_pb2.py  schedule_pb2_grpc.py  server.py
src/grpc_server/servicers/: schedule_servicer.py  utils.py
src/repositories/: __init__.py  base_repo.py  schedule_repo.py  user_repo.py
tests/: conftest.py  models.py  test_grpc_client.py  test_schedule_api.py  test_schedule_servicer.py  test_schedule_utils.py
